[package]
name = "canistergeek_ic_rust"
version = "0.2.2"
edition = "2021"
description = "A tool for Internet Computer to track your project canisters cycles and memory status."
license = "MIT"
repository = "https://github.com/usergeek/canistergeek_ic_rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.15"
ic-cdk = "0.5.6"
ic-cdk-macros = "0.5.6"
serde = "1.0"
chrono = "0.4"
regex = "1.5.4"
